[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pyadtpulse"
version = "1.2.11"
description = "Python interface for ADT Pulse security systems"
authors = [{ name = "Ryan Snodgrass" }]
maintainers = [{ name = "Elliot Worth" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.12.14",
    "aiohttp-fast-zlib[zlib-ng]>=0.3.0",
    "lxml>=6.0.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "bandit[sarif,toml]>=1.8.6",
    "freezegun>=1.5.2",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-isolate>=0.0.12",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "typeguard>=4.4.4",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.ruff]
line-length = 88 # Matches black

lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "UP", # pyupgrade
    "T",  # flake8-print
    "PL", # pylint
]
lint.ignore = [
    "D203", #no-blank-line-before-class
    "D212", #multi-line-summary-first-line
]

exclude = ["example-client.py"]

[tool.ruff.format]
quote-style = "double" # Matches black
line-ending = "lf"     # Matches black

[tool.uv.build-backend]
module-name = "pyadtpulse"
module-root = ""
